Gedit nije instaliran na zadnjoj verziji minta

--- a/OSvjezba10.tex
+++ b/OSvjezba10.tex
@@ -43,7 +43,7 @@ Prebacivanje procesa iz prednjeg plana u pozadinu:
 \end{enumerate}
 
 \begin{zadatak}
-	Pokreniti \texttt{gedit} i prebaciti ga u pozadinu.
+	Pokreniti program za uređivanje teksta \texttt{xed} ili \texttt{gedit} i prebaciti ga u pozadinu.
 \end{zadatak}
 
 \begin{zadatak}
